kubernetes/darkmore/polaris/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: polaris
spec:
  parentRefs:
  - name: gateway-tailscale
    namespace: kgateway-system
    group: gateway.networking.k8s.io
  hostnames:
    - polaris.infrastructure.ramona.fun
  rules:
    - backendRefs:
      - name: polaris-dashboard
        kind: Service
        port: 80
        group: ""
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
